k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: parilink-prod
  labels:
    name: parilink-prod
    environment: production
